# dekrilo

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: cli.rs  diff.rs  lib.rs  main.rs  my_strings.rs  noise.rs  noise_old.rs  timecalc.rs
